# tmpl-generator

./: .gitignore  README.md  download_landscapes.sh  main.py  mask_mapping.json  pyproject.toml  setup.py
tmpl_generator/: __init.py__
tmpl_generator/configs/: __init.py__  mask_config.py
tmpl_generator/core/: __init.py__  file_monitor.py  image_processor.py  mask_manager.py  system_monitor.py  tmpl_monitor.py
tmpl_generator/utils/: __init.py__  constants.py  dynamic_config.py
